// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/Desktop hook toggles correctly 1`] = `
<div
  className="tss-1nx07pp-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed tss-1df7yw6-appBar open mui-fixed mui-1m11fdx-MuiPaper-root-MuiAppBar-root"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked open tss-16r5kf8-drawer-drawerOpen mui-7ik032-MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper open tss-1ydribx-drawerOpen MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft mui-1ibis0h-MuiPaper-root-MuiDrawer-paper"
    >
      <svg
        aria-label="toggle menu"
        className="tss-v4r7lq-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/Desktop it renders 1`] = `
<div
  className="tss-1nx07pp-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed tss-1df7yw6-appBar mui-fixed mui-1m11fdx-MuiPaper-root-MuiAppBar-root"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked closed tss-196gz59-drawer-drawerClose mui-7ik032-MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper closed tss-1d2bgsb-drawerClose MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft mui-1ibis0h-MuiPaper-root-MuiDrawer-paper"
    >
      <svg
        aria-label="toggle menu"
        className="tss-v4r7lq-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;
